syntax = "proto3";

package testagg;

message TestAggFooUpdated {
    string aggregateId = 1;
    string newFoo = 2;
}